# muset-ai-research

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_TEST_REPORT.md  README.md  docker-compose.yml
backend/: .flake8  .gitignore  Dockerfile  README.md  TEST_PROGRESS_SUMMARY.md  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 1760aab0e986_initial_database_schema.py  add_audit_and_subscription_models.py  add_notification_models.py  add_prompt_suggestion_and_inspiration_board.py  add_search_index_and_history_models.py  add_upload_and_agent_models.py  add_writing_styles_table.py  d590d64b2fc2_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  exceptions.py  logging.py  metrics.py  middleware.py  retry.py  security.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/models/: __init__.py  agent.py  audit.py  chat.py  config.py  file.py  memory.py  mixins.py  notification.py  page.py  prompt.py  search.py  style.py  subscription.py  task.py  upload.py  user.py  workspace.py
backend/app/schemas/: auth.py  config.py  notification.py  page.py  search.py  user.py  workspace.py
backend/app/services/: deep_agent.py  file_system_manager.py  mcp_adapter.py  mcp_config_manager.py  memory_manager.py  model_config_manager.py  notification_service.py  search_service.py  skill_loader.py  style_manager.py  subagent_manager.py  task_planner.py  websocket_manager.py
backend/docs/: ERROR_HANDLING.md
backend/tests/: conftest.py  locustfile.py  test_audit_subscription_models.py  test_auth.py  test_config_import_export.py  test_error_handling.py  test_i18n.py  test_model_config.py  test_monitoring.py  test_notifications.py  test_performance.py  test_prompt_models.py  test_search.py  test_style_manager.py  test_upload_agent_models.py
backend/tests/integration/: test_deep_agent.py
backend/tests/property/: test_config_roundtrip.py  test_context_size_management.py  test_file_system_roundtrip.py  test_mcp_tool_equivalence.py  test_model_switching.py  test_skill_instruction_injection.py  (+2 more)
frontend/: Dockerfile  (+8 more)
(+91 files in other folders)
